ersatt med gamla SelectDishScreen

--- a/index.html
+++ b/index.html
@@ -75,7 +75,36 @@
 
 </div>
 
+  <div id="SelectDishScreen">
+      <div id="vitruta">
+        <h2>Select Dish</h2>
+        <!-- search for -->
+        <div class="input-group">
+          <input id="searchvalue" type="text" class="form-control" placeholder="Enter key words">
+          <span class="input-group-btn">
+            <button id="search" class="btn btn-default" type="button">Search</button>
+          </span>
 
+
+          <!-- main dessert starter -->
+          <div class="col-xs-5">
+            <select id="coursebutton" class="form-control">
+              <option data-type="starter" selected>Starter</option>
+              <option data-type="main dish" selected>Main</option>
+              <option data-type="dessert" selected>Dessert</option>
+            </select>
+          </div>
+        </div>
+       </div>
+
+      <div id=' + dishes[k].id + '>
+      <img style="width:150px;height:150px;" src="images/toast.jpg">
+      <br><button id="toast" class="btn btn-default" type="button">Toast</button>
+      <br>Ipsum tjoho
+      </div>
+  </div>
+
+<!--
 	<div class="container col-md-offset-2" id="SelectDishScreen">
     <div>
       <h1>Select Dish</h1>
@@ -90,22 +119,22 @@
     </form>
     </div>
     <div class="dish">
-      <img src="images\toast.jpg" style="">
+      <img src="images\toast.jpg">
       <button class="btn btn-default">Toast</button>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class="dish">
-      <img src="images\meatballs.jpg" style="">
+      <img src="images\meatballs.jpg">
       <button class="btn btn-default">Meatballs</button>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     <div class="dish">
-      <img src="images\icecream.jpg" style="">
+      <img src="images\icecream.jpg">
       <button class="btn btn-default">Ice Cream</button>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
     </div>
   </div>
-
+-->
   	</div>
 </div>
 			
