--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-
+<!--
 <div id="SelectDishScreen" style="display: block;">
   <div id="vitruta">
     <h2>Select Dish</h2>
@@ -108,8 +108,9 @@
         <div id="202"><img style="width:150px;height:150px;" src="images/icecream.jpg" alt="icecream.jpg"><br>Strawberry</div></li>
     </div> 
 </div>
+-->
 
-<!--
+
 <div id="DishDetailsScreen">
 
   <div id="imagetext"> 
@@ -121,11 +122,15 @@
   <div id="ingred">
     <h2>Ingredients for <span id="numberOfGuests"></span> people</h2>
     <p><div id="ingredients" style="display:all;"></div></p>
-      <p>SEK     <span id="totalPrice"></span>  </p></br></br>
+      <p>SEK     <span id="totalingredientprice"></span>  </p></br></br>
     <input id="confirmdish" class="btn btn-default" type="button" value="Confirm Dish">
+
+    <span id="totaldishprice"></span> 
+
+
   </div>
 </div>
--->
+
 
 <!--
 <div id ="DinnerOverviewScreen">
