--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
   <div id="goback">
     <button id="gobackbutton" class="btn btn-default" type="button" style="float: right;" >Go back and edit dinner</button>
     <button id="finishButton" class="btn btn-default" type="button" style="float: right;">View Preparation</button>
+totalmenuprice
+    
   </div>
   
   <span id="menuView"><span>
@@ -145,11 +147,9 @@
 -->
 
 
- <div id="PreparationScreen">
-    
+ <div id="PreparationScreen">  
     <span id="prep"></span>
     </div>
-  
   </div>
 
 
