lagt till leftNavBarController

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ totalmenuprice
   <script src="js/view/homeScreen.js"></script>
 
   <script src="js/view/leftNavBar.js"></script>
+  <script src="js/controller/leftNavBarController.js"></script>
   <script src="js/view/selectDishScreen.js"></script>
   <script src="js/view/dishDetailsScreen.js"></script>
   <script src="js/view/dinnerOverviewScreen.js"></script>
