--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Dinner planner</title>
 
     <!-- Bootstrap CSS -->
@@ -36,7 +36,7 @@
     	<div class="col-md-12">   
         <div class="col-md-8">
           <p>People</p>
-          <div id="numberOfGuests"></div>
+          <div id="numberOfGuests"><input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10"></div>
           <br>
         </div>
       <div class="col-md-4">  
@@ -48,14 +48,14 @@
         <div class="row">
           <div class="col-md-12">
               <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button> 
-          </div>  
+          </div> 
         </div>
       </div>
       </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12">   
+      <div class="col-md-12">   
 		    <div class="col-md-8">
         		<p>Dishname</p>
         		<div id="dishname"></p></div>
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-<!--
+
 <div id="SelectDishScreen" style="display: block;">
   <div id="vitruta">
     <h2>Select Dish</h2>
@@ -162,13 +162,14 @@ totalmenuprice
 	<script src="js/app.js"></script>
 	<script src="js/model/dinnerModel.js"></script>
   <script src="js/view/homeScreen.js"></script>
-
   <script src="js/view/leftNavBar.js"></script>
-  <script src="js/controller/leftNavBarController.js"></script>
   <script src="js/view/selectDishScreen.js"></script>
   <script src="js/view/dishDetailsScreen.js"></script>
   <script src="js/view/dinnerOverviewScreen.js"></script>
   <script src="js/view/preparationScreen.js"></script>
+
+
+    <script src="js/controller/leftNavBarController.js"></script>
 
   </body>
 </html>
