--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     	<div class="col-md-12">   
         <div class="col-md-8">
           <p>People</p>
-          <div id="numberOfGuests"><input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10"></div>
+          <div id="numberOfGuests">1</div>
           <br>
         </div>
       <div class="col-md-4">  
@@ -108,9 +108,8 @@
         <div id="202"><img style="width:150px;height:150px;" src="images/icecream.jpg" alt="icecream.jpg"><br>Strawberry</div></li>
     </div> 
 </div>
--->
 
-
+<!--
 <div id="DishDetailsScreen">
 
   <div id="imagetext"> 
@@ -120,7 +119,7 @@
   </div>
 
   <div id="ingred">
-    <h2>Ingredients for <span id="numberOfGuests"></span> people</h2>
+    <h2>Ingredients for <span id="Guests"></span> people</h2>
     <p><div id="ingredients" style="display:all;"></div></p>
       <p>SEK     <span id="totalingredientprice"></span>  </p></br></br>
     <input id="confirmdish" class="btn btn-default" type="button" value="Confirm Dish">
@@ -130,7 +129,7 @@
 
   </div>
 </div>
-
+-->
 
 <!--
 <div id ="DinnerOverviewScreen">
